# faq-search

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-image.yaml  ci.yaml  upload-codecov.yaml
docker/: Dockerfile
src/faq-seach/: __init__.py  main.py
src/faq_search/: __init__.py  cli.py  db.py  faiss_index.py  main.py  server.py
tests/: test_db.py  test_main.py
