[project]
name = "faq-seach"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "moz-sec", email = "m0253c@gmail.com" }
]
dependencies = [
    "faiss-cpu>=1.8.0.post1",
    "sentence-transformers>=3.0.1",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "torch==2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/faq_seach"]
