[project]
name = "faq-search"
version = "0.2.0"
description = "`faq-search` is FAQ search system"
authors = [
    { name = "moz-sec", email = "m0253c@gmail.com" }
]
dependencies = [
    "faiss-cpu>=1.8.0.post1",
    "sentence-transformers>=3.0.1",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "torch==2.4.0",
    "fastapi>=0.111.1",
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/faq_search"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]
